<!--
  ~    Copyright (C) 2021 Tegar Bangun Suganda, ASTARIA.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">LXIV Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_fragment_one">Hi, there</string>
    <string name="welcome_fragment_two">Welcome to LXIV Demo</string>
    <string name="welcome_fragment_three">We really glad you\ntry our small project</string>
    <string name="base64_string">Base64 String</string>
    <string name="load_an_image">Load an Image</string>
    <string name="fit_center">Fit Center</string>
    <string name="center_crop">Center Crop</string>
    <string name="base64_length">Base64 Length :</string>
    <string name="decode_base64">Decode Base64</string>
    <string name="image_view">Image View</string>
    <string name="home">Home</string>
    <string name="encoder">Encoder</string>
    <string name="decoder">Decoder</string>
</resources>