<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2021 Tegar Bangun Suganda, ASTARIA.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- itemId should same with your Navigation Graph Fragment's Id -->
    <!-- menuCategory="secondary" allow you to add to back stack -->

    <item android:id="@+id/welcomeFragment"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/encoderFragment"
        android:icon="@drawable/ic_action_lock"
        android:title="@string/encoder"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/decoderFragment"
        android:icon="@drawable/ic_action_lock_open"
        android:title="@string/decoder"
        app:showAsAction="ifRoom" />

</menu>