<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2021 Tegar Bangun Suganda, ASTARIA.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".encoder.EncoderFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_image_container_FrEncoder"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:elevation="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/image_view"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/imgv_image_loaded_FrEncoder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/btn_encoder_load_an_image_FrEncoder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cv_image_container_FrEncoder">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_encoder_fit_center_scaletype_FrEncoder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:text="@string/fit_center"
            android:textAllCaps="false"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_encoder_center_crop_scaletype_FrEncoder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/center_crop"
            android:textAllCaps="false"
            android:textSize="13sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_encoder_load_an_image_FrEncoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/load_an_image"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/til_encoder_base64_string_FrEncoder"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_encoder_base64_string_FrEncoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/transparent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_action_copy_all"
        app:layout_constraintBottom_toTopOf="@+id/ll_counter_container_FrEncoder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_encoder_base64_string_FrEncoder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/base64_string"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_counter_container_FrEncoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/base64_length" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_encode_base64_length_FrEncoder"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginStart="10dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>