<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2021 Tegar Bangun Suganda, ASTARIA.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/blur_decoration_figma"
    tools:context=".WelcomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome_greet_one_FrWelcome"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_fragment_one"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome_greet_two_FrWelcome"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_fragment_two"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_greet_one_FrWelcome" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome_greet_three_FrWelcome"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_fragment_three"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_greet_two_FrWelcome"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_greet_two_FrWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_greet_two_FrWelcome" />

</LinearLayout>